# Agentic_AI

./: .dockerignore  .gitignore  Dockerfile  README.md  archive.py  calender.py  chat_memory.db  client.py  client_clean.py  client_fixed_backup.py  debug_music.py  debug_script.py  executioner.py  github.py  gmail.json  gmail.py  intent_router.py  main.py  maths_server2.py  mathserver.py  music_player.py  personalized_task.py  pyproject.toml  rag.py  requirements.txt  requirment.txt  rule_based_verifier.py  server.py  spotify.py  test_agent.py  test_cases  test_servers.py  tool_keywords.json  translate.py  weather.json  weather.py  websearch.py  website.html  what_to_do
faiss_index/: index.faiss  index.pkl
